5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1759_2101.log
== TEST (2019-05-29 16:05:34) 
-- CODE:
from numpy import* 
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:05:45) 
-- CODE:
from numpy import* 
print(zeros(5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:08:38) 
-- CODE:
from numpy import* 
st=array(int(input("")))
a=zeros(5)
b= st[i]+b
print(a+b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:11:00) 
-- CODE:
from numpy import* 
n=int(input("insira um numero natural maior que 2: ")
a=zeros(n)
print(a)

-- ERROR:
File "XXXX", line 3
    a=zeros(n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:11:18) 
-- CODE:
from numpy import* 
n=int(input("insira um numero natural maior que 2: ":
				
print(a)

-- ERROR:
File "XXXX", line 2
    n=int(input("insira um numero natural maior que 2: ":
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:11:22) 
-- CODE:
from numpy import* 
n=int(input("insira um numero natural maior que 2: ":
				
print(a)

-- ERROR:
File "XXXX", line 2
    n=int(input("insira um numero natural maior que 2: ":
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:11:47) 
-- CODE:
from numpy import* 
n=int(input("insira um numero natural maior que 2: ")
a=zeros(n)
print(a)

-- ERROR:
File "XXXX", line 3
    a=zeros(n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:12:01) 
-- CODE:
from numpy import* 
n=int(input("insira um numero natural maior que 2: ")
h=zeros(n)
print(h)

-- ERROR:
File "XXXX", line 3
    h=zeros(n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:12:18) 
-- CODE:
print("merda")
-- OUTPUT:
merda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:13:00) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
a=zeros(n)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=zeros(n)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:13:18) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:14:26) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
i=0
while i!= size(a):
	a=a+a
	i=1+i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:14:32) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
i=0
while i!= size(a):
	a=a+a
	i=1+i
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:14:42) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
i=0
while i!= size(a):
	a=a+a
	i=1+i
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:20:53) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
i=0
j=-1
k=0
a=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:20:56) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n)
i=0
j=-1
k=0
a=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:22:40) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	2print(a)
-- ERROR:
File "XXXX", line 13
    2print(a)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:22:49) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:23:10) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a=0
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:23:19) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a=0
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:23:57) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:24:36) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a[1]=1
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:24:47) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
a[1]=1
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:25:32) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=ones(n,dtype=int)
i=0
j=-1
k=0
a[0]=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:25:57) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=ones(n,dtype=int)
i=0
j=-1
k=0
a[0]=0
while i!= size(a):
	a[i]=a[j]+a[k]
	i=1+i
	j=j+1
	k=k+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:39:14) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:39:53) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
print(a[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:42:50) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:43:03) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:43:27) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:44:30) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-1
k=0
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(i,j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:46:29) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(i,j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:46:32) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(i,j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:47:25) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(i,j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:47:44) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
	print(i,j,k)
	print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:47:55) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:48:03) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:48:27) 
-- CODE:
n= int(input("insira um numero natural maior que 2: "))
from numpy import*
a=zeros(n,dtype=int)
i=0
j=-2
k=-1
while i!= size(a):
	a[i]=a[j]+a[k]
	a[1]=1
	i=1+i
	j=j+1
	k=k+1
print(a)

-- EXECUTION TIME:
0.500201
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
